--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <div class="container">
         <h1>Encontre suas palavras-chave</h1>
         <textarea id="entrada-de-texto" placeholder="Digite ou cole seu texto"></textarea>
-
-
+        <button id="resultado-palavrachave">extrair</button>
+        <div id="resultado-palavrachave"></div>
     </div>
+
+    <script type="module" src="script.js"></script>
     
 </body>
 </html>
