--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Encontre suas palavras-chave</h1>
         <textarea id="entrada-de-texto" placeholder="Digite ou cole seu texto"></textarea>
-        <button id="resultado-palavrachave">extrair</button>
+        <button id="botao-palavrachave">extrair</button>
         <div id="resultado-palavrachave"></div>
     </div>
 
